<resources>
    <string name="app_name">Euroconstrucciones</string>
    <string name="app_title">Euroconstrucciones</string>
    <string name="app_options">Options</string>
    <string name="toolbar_about_us">About Us</string>
    <string name="toolbar_new_budget">New Budget</string>
    <string name="toolbar_my_budgets">My Budgets</string>
    <string name="toolbar_gallery">Gallery</string>
    <string name="toolbar_language">Language</string>
    <string name="toolbar_english">English</string>
    <string name="toolbar_spanish">Spanish</string>
    <string name="toolbar_catalan">Catalan</string>
    <string name="login_mail">E-Mail:</string>
    <string name="login_pwd">Password:</string>
    <string name="login_login">Login</string>
    <string name="login_no_account">You don\'t have an account?</string>
    <string name="login_register">Register</string>
    <string name="login_forgot_pwd">Forgot your password?</string>
    <string name="register_name">Name and surnames:</string>
    <string name="register_email">E-Mail:</string>
    <string name="register_phone">Phone Number:</string>
    <string name="register_pwd">Password:</string>
    <string name="register_pwd_confirm">Confirm Password:</string>
    <string name="register_register">Register</string>
    <string name="register_submit_success">Register successful</string>
    <string name="register_submit_fail">An error has ocurred</string>
    <string name="generic_title"><u>Client Data</u></string>
    <string name="generic_full_name">"Name and Surnames: "</string>
    <string name="generic_street">"Street: "</string>
    <string name="generic_postal_code">"Postal Code: "</string>
    <string name="generic_municipality">"Municipality: "</string>
    <string name="generic_province">"Province: "</string>
    <string name="generic_btn_new_build">New Build</string>
    <string name="generic_btn_reform_kitchen">Reform Kitchen</string>
    <string name="generic_btn_reform_bathroom">Reform Bathroom</string>
    <string name="generic_choose_budget">Please choose a budget type:</string>
    <string name="alert_message_empty">All fields need to be filled.</string>
    <string name="alert_message_pwd">Password and confirmation do not match.</string>
    <string name="alert_button_ok">OK</string>
    <string name="budget_button_submit">Submit Budget</string>
    <string name="build_title"><u>New Build</u></string>
    <string name="build_total_m2">Total m²:</string>
    <string name="build_material_quality">Quality of Materials:</string>
    <string name="build_material_low">Low</string>
    <string name="build_material_mid">Medium</string>
    <string name="build_material_high">High</string>
    <string name="reform_bathroom_title"><u>Reform Bathroom</u></string>
    <string name="reform_bathroom_length">"Length (m²): "</string>
    <string name="reform_bathroom_height">"Height (m²): "</string>
    <string name="reform_bathroom_width">"Width (m²): "</string>
    <string name="reform_bathroom_tile_price">"Tile Price (€/m²): "</string>
    <string name="reform_bathroom_pieces_add">Number of Bathroom Pieces to Add:</string>
    <string name="reform_bathroom_pieces_remove">Number of Bathroom Pieces to Remove:</string>
    <string name="reform_bathroom_pieces_num_none">0</string>
    <string name="reform_bathroom_pieces_num_one">1</string>
    <string name="reform_bathroom_pieces_num_two">2</string>
    <string name="reform_bathroom_pieces_num_three">3</string>
    <string name="reform_bathroom_pieces_num_four">4</string>
    <string name="reform_kitchen_title"><u>Reform Kitchen</u></string>
    <string name="reform_kitchen_length">"Length (m²): "</string>
    <string name="reform_kitchen_height">"Height (m²): "</string>
    <string name="reform_kitchen_width">"Width (m²): "</string>
    <string name="reform_kitchen_tile_price">"Tile Price (€/m²): "</string>
    <string name="reform_kitchen_renovation">"Need to modify installations? "</string>
    <string name="reform_kitchen_renovation_yes">Yes</string>
    <string name="reform_kitchen_renovation_no">No</string>
    <string name="reform_kitchen_surface_furniture">"Total Furniture Surface (m): "</string>
    <string name="reform_kitchen_surface_worktop">"Total Worktop Surface (m): "</string>
    <string name="login_submit_success">Login successful</string>
    <string name="login_submit_fail">Login failed</string>
    <string name="my_budgets_title"><u>My Budgets</u></string>
    <string name="budget_submit_success">Budget saved successfully</string>
    <string name="budget_submit_fail">Error while saving Budget</string>
    <string name="my_budgets_fail">Unable to retrieve Budgets</string>
    <string name="generic_data_title">Data:</string>
    <string name="generic_reference">"Reference: "</string>
    <string name="generic_total">"Total: "</string>
    <string name="about_us_title"><u>About Us</u></string>
</resources>