<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <include layout="@layout/toolbar_layout" />

            <TextView
                android:id="@+id/tvBudgetBuildTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBudgetBuildM2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_total_m2" />

            <EditText
                android:id="@+id/etBudgetBuildM2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/build_total_m2"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvBudgetBuildQuality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_material_quality" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/rbBudgetBuildQualityLow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/build_material_low" />

                <RadioButton
                    android:id="@+id/rbBudgetBuildQualityMid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/build_material_mid" />

                <RadioButton
                    android:id="@+id/rbBudgetBuildQualityHigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/build_material_high" />
            </RadioGroup>

            <Button
                android:id="@+id/btnBudgetBuildSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget_button_submit" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>