<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BudgetClientDataActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <include layout="@layout/toolbar_layout" />

            <TextView
                android:id="@+id/tvBudgetClientTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generic_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNameSurnames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generic_full_name" />

            <EditText
                android:id="@+id/etNameSurnames"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/generic_full_name"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generic_street" />

            <EditText
                android:id="@+id/etStreet"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/generic_street"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generic_postal_code" />

            <EditText
                android:id="@+id/etPostalCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/generic_postal_code"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvMunicipality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generic_municipality" />

            <AutoCompleteTextView
                android:id="@+id/actvMunicipality"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/generic_municipality"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generic_province" />

            <Spinner
                android:id="@+id/spProvince"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generic_choose_budget"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnNewBuild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generic_btn_new_build" />

            <Button
                android:id="@+id/btnReformKitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generic_btn_reform_kitchen" />

            <Button
                android:id="@+id/btnReformBathroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generic_btn_reform_bathroom" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>