<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BudgetReformKitchenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <include layout="@layout/toolbar_layout" />

            <TextView
                android:id="@+id/tvBudgetReformKitchenTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_kitchen_title"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBudgetReformKitchenHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_kitchen_height" />

            <EditText
                android:id="@+id/etBudgetReformKitchenHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reform_kitchen_height"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvBudgetReformKitchenWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_kitchen_width" />

            <EditText
                android:id="@+id/etBudgetReformKitchenWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reform_kitchen_width"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvBudgetReformKitchenLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_kitchen_length" />

            <EditText
                android:id="@+id/etBudgetReformKitchenLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reform_kitchen_length"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvBudgetReformKitchenTiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_kitchen_tile_price" />

            <EditText
                android:id="@+id/etBudgetReformKitchenTiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reform_kitchen_tile_price"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvBudgetReformKitchenReno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_kitchen_renovation" />

            <RadioGroup
                android:id="@+id/rgReformKitchenReno"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbReformKitchenRenoYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_kitchen_renovation_yes" />

                <RadioButton
                    android:id="@+id/rbReformKitchenRenoNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_kitchen_renovation_no" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvBudgetReformKitchenFurnitureM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_kitchen_surface_furniture" />

            <EditText
                android:id="@+id/etBudgetReformKitchenFurnitureM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reform_kitchen_surface_furniture"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvBudgetReformKitchenWorktopM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_kitchen_surface_worktop" />

            <EditText
                android:id="@+id/etBudgetReformKitchenWorktopM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reform_kitchen_surface_worktop"
                android:inputType="number" />

            <Button
                android:id="@+id/btnReformKitchenSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget_button_submit" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>