<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <include layout="@layout/toolbar_layout" />

            <TextView
                android:id="@+id/tvBudgetReformBathroomTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_bathroom_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBudgetReformBathroomHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_bathroom_height" />

            <EditText
                android:id="@+id/etBudgetReformBathroomHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reform_bathroom_height"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvBudgetReformBathroomWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_bathroom_width" />

            <EditText
                android:id="@+id/etBudgetReformBathroomWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reform_bathroom_height"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvBudgetReformBathroomLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_bathroom_length" />

            <EditText
                android:id="@+id/etBudgetReformBathroomLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reform_bathroom_length"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvBudgetReformBathroomTiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_bathroom_tile_price" />

            <EditText
                android:id="@+id/etBudgetReformBathroomTiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reform_bathroom_tile_price"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvBudgetReformBathroomPiecesAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_bathroom_pieces_add" />

            <RadioGroup
                android:id="@+id/rgBathroomPiecesAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbBathroomPiecesAddNone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_bathroom_pieces_num_none" />

                <RadioButton
                    android:id="@+id/rbBathroomPiecesAddOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_bathroom_pieces_num_one" />

                <RadioButton
                    android:id="@+id/rbBathroomPiecesAddTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_bathroom_pieces_num_two" />

                <RadioButton
                    android:id="@+id/rbBathroomPiecesAddThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_bathroom_pieces_num_three" />

                <RadioButton
                    android:id="@+id/rbBathroomPiecesAddFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_bathroom_pieces_num_four" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvBudgetReformBathroomPiecesRemove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reform_bathroom_pieces_remove" />

            <RadioGroup
                android:id="@+id/rgBathroomPiecesRemove"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbBathroomPiecesRemoveNone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_bathroom_pieces_num_none" />

                <RadioButton
                    android:id="@+id/rbBathroomPiecesRemoveOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_bathroom_pieces_num_one" />

                <RadioButton
                    android:id="@+id/rbBathroomPiecesRemoveTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_bathroom_pieces_num_two" />

                <RadioButton
                    android:id="@+id/rbBathroomPiecesRemoveThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_bathroom_pieces_num_three" />

                <RadioButton
                    android:id="@+id/rbBathroomPiecesRemoveFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reform_bathroom_pieces_num_four" />

            </RadioGroup>

            <Button
                android:id="@+id/btnReformBathroomSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget_button_submit" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>