<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <include layout="@layout/toolbar_layout"/>

            <TextView
                android:id="@+id/tvLoginMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_mail" />

            <EditText
                android:id="@+id/etLoginMail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/login_mail"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvLoginPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_pwd" />

            <EditText
                android:id="@+id/etLoginPwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/login_pwd"
                android:inputType="text|textWebPassword" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLoginNoAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/login_no_account" />

                <TextView
                    android:id="@+id/tvLoginRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_register"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvLoginForgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot_pwd" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>